Source/Alternet.UI.Pal/Api/ImageSet.Api.h

// <auto-generated>This code was generated by a tool, DO NOT MODIFY MANUALLY. Copyright AlterNET, 2023.</auto-generated>

#pragma once

#include "ImageSet.h"
#include "InputStream.h"
#include "Image.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API ImageSet* ImageSet_Create_()
{
    return MarshalExceptions<ImageSet*>([&](){
            return new ImageSet();
        });
}

ALTERNET_UI_API c_bool ImageSet_GetIsOk_(ImageSet* obj)
{
    return MarshalExceptions<c_bool>([&](){
            return obj->GetIsOk();
        });
}

ALTERNET_UI_API c_bool ImageSet_GetIsReadOnly_(ImageSet* obj)
{
    return MarshalExceptions<c_bool>([&](){
            return obj->GetIsReadOnly();
        });
}

ALTERNET_UI_API void ImageSet_LoadFromStream_(ImageSet* obj, void* stream)
{
    MarshalExceptions<void>([&](){
            obj->LoadFromStream(stream);
        });
}

ALTERNET_UI_API void ImageSet_AddImage_(ImageSet* obj, Image* image)
{
    MarshalExceptions<void>([&](){
            obj->AddImage(image);
        });
}

ALTERNET_UI_API void ImageSet_Clear_(ImageSet* obj)
{
    MarshalExceptions<void>([&](){
            obj->Clear();
        });
}

ALTERNET_UI_API void ImageSet_LoadSvgFromStream_(ImageSet* obj, void* stream, int width, int height)
{
    MarshalExceptions<void>([&](){
            obj->LoadSvgFromStream(stream, width, height);
        });
}