Source/Alternet.UI/Native/ImageSet.cs

// <auto-generated>This code was generated by a tool, DO NOT MODIFY MANUALLY. Copyright AlterNET, 2023.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal class ImageSet : NativeObject
    {
        static ImageSet()
        {
        }
        
        public ImageSet()
        {
            SetNativePointer(NativeApi.ImageSet_Create_());
        }
        
        public ImageSet(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public bool IsOk
        {
            get
            {
                CheckDisposed();
                var n = NativeApi.ImageSet_GetIsOk_(NativePointer);
                return n;
            }
            
        }
        
        public bool IsReadOnly
        {
            get
            {
                CheckDisposed();
                var n = NativeApi.ImageSet_GetIsReadOnly_(NativePointer);
                return n;
            }
            
        }
        
        public void LoadFromStream(InputStream stream)
        {
            CheckDisposed();
            NativeApi.ImageSet_LoadFromStream_(NativePointer, stream.NativePointer);
        }
        
        public void AddImage(Image image)
        {
            CheckDisposed();
            NativeApi.ImageSet_AddImage_(NativePointer, image.NativePointer);
        }
        
        public void Clear()
        {
            CheckDisposed();
            NativeApi.ImageSet_Clear_(NativePointer);
        }
        
        public void LoadSvgFromStream(InputStream stream, int width, int height)
        {
            CheckDisposed();
            NativeApi.ImageSet_LoadSvgFromStream_(NativePointer, stream.NativePointer, width, height);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr ImageSet_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool ImageSet_GetIsOk_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool ImageSet_GetIsReadOnly_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ImageSet_LoadFromStream_(IntPtr obj, IntPtr stream);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ImageSet_AddImage_(IntPtr obj, IntPtr image);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ImageSet_Clear_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ImageSet_LoadSvgFromStream_(IntPtr obj, IntPtr stream, int width, int height);
            
        }
    }
}
